# metaverse

.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
chat_backend/src/: main.rs
chat_frontend/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs
