[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
log = "0.4.27"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "io-std"] }
env_logger = "0.11.8"
futures-channel = "0.3.31"

